[package]
name = "shushos"
version = "0.1.0"
authors = ["Shushpancheak <Makcieml@gmail.com>"]
edition = "2018"

###############################################################################
# Build profiles
###############################################################################

[profile.dev]
panic = "abort" # Disables stack unwinding on panic.

[profile.release]
panic = "abort" # Disables stack unwinding on panic.

###############################################################################
# Dependencies
###############################################################################

[dependencies]
