[package]
name = "shushos"
version = "0.1.0"
authors = ["Shushpancheak <Makcieml@gmail.com>"]
edition = "2018"

###############################################################################
# Build profiles
###############################################################################

# Disabled "abort" option due to cargo's bug.

#[profile.dev]
#panic = "abort" # Disables stack unwinding on panic.
#
#[profile.release]
#panic = "abort" # Disables stack unwinding on panic.

###############################################################################
# Dependencies
###############################################################################

[dependencies]
bootloader = { version = "0.9.3", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.13.2"
uart_16550 = "0.2.0"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

################################################################################
# Additional flags
################################################################################

# Enabling QEMU's isa-debug-exit feature for exiting the QEMU from guest system.
# Enabling serial IO ports for communication with the guest and the host system.
# Disabling QEMU display completely.
[package.metadata.bootimage]
test-args = [
    "-device",  "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",  "stdio",
    "-display", "none"
]
# The successful tests exit code, cunstructed in compliance with QEMU
# exit code creation method. The code is derived from the formula
# (0x10 << 1) | 1
test-success-exit-code = 33

# Disables test harnesses.
[[test]]
name = "should_panic"
harness = false
[[test]]
name = "stack_overflow"
harness = false
